--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ environment:
 
 dependencies:
   http: ^0.13.1
+  file_picker: ^3.0.1
+  csv: ^5.0.0
   numberpicker: ^2.0.1
   flutter:
     sdk: flutter
